# do not install libasn1 -> convenience library
noinst_LTLIBRARIES = libasn1.la

# libasn1 include should be in ../include/dnds/asn1
libasn1_includedir=$(includedir)/dnds/asn1

libasn1_la_SOURCES=	\
	DNDSMessage.c	\
	DNDSResult.c	\
	DNMessage.c	\
	DSMessage.c	\
	DNDSObject.c	\
	AuthRequest.c	\
	AuthResponse.c	\
	P2pRequest.c	\
	P2pResponse.c	\
	P2pSide.c	\
	AddRequest.c	\
	AddResponse.c	\
	DelRequest.c	\
	DelResponse.c	\
	ModifyRequest.c	\
	ModifyResponse.c	\
	NetinfoRequest.c	\
	NetinfoResponse.c	\
	SearchRequest.c	\
	SearchResponse.c	\
	TerminateRequest.c	\
	Acl.c	\
	AclGroup.c	\
	IpPool.c	\
	Context.c	\
	Host.c	\
	Node.c	\
	Permission.c	\
	Peer.c	\
	User.c

libasn1_include_HEADERS=	\
	DNDSMessage.h	\
	DNDSResult.h	\
	DNMessage.h	\
	DSMessage.h	\
	DNDSObject.h	\
	AuthRequest.h	\
	AuthResponse.h	\
	P2pRequest.h	\
	P2pResponse.h	\
	P2pSide.h	\
	AddRequest.h	\
	AddResponse.h	\
	DelRequest.h	\
	DelResponse.h	\
	ModifyRequest.h	\
	ModifyResponse.h	\
	NetinfoRequest.h	\
	NetinfoResponse.h	\
	SearchRequest.h	\
	SearchResponse.h	\
	TerminateRequest.h	\
	Acl.h	\
	AclGroup.h	\
	IpPool.h	\
	Context.h	\
	Host.h	\
	Node.h	\
	Permission.h	\
	Peer.h	\
	User.h

libasn1_include_HEADERS+=BOOLEAN.h
libasn1_la_SOURCES+=BOOLEAN.c
libasn1_include_HEADERS+=INTEGER.h
libasn1_include_HEADERS+=NativeEnumerated.h
libasn1_include_HEADERS+=IA5String.h
libasn1_la_SOURCES+=IA5String.c
libasn1_la_SOURCES+=INTEGER.c
libasn1_include_HEADERS+=NULL.h
libasn1_la_SOURCES+=NULL.c
libasn1_la_SOURCES+=NativeEnumerated.c
libasn1_include_HEADERS+=NativeInteger.h
libasn1_la_SOURCES+=NativeInteger.c
libasn1_include_HEADERS+=PrintableString.h
libasn1_la_SOURCES+=PrintableString.c
libasn1_include_HEADERS+=asn_SEQUENCE_OF.h
libasn1_la_SOURCES+=asn_SEQUENCE_OF.c
libasn1_include_HEADERS+=asn_SET_OF.h
libasn1_la_SOURCES+=asn_SET_OF.c
libasn1_include_HEADERS+=constr_CHOICE.h
libasn1_la_SOURCES+=constr_CHOICE.c
libasn1_include_HEADERS+=constr_SEQUENCE.h
libasn1_la_SOURCES+=constr_SEQUENCE.c
libasn1_include_HEADERS+=constr_SEQUENCE_OF.h
libasn1_la_SOURCES+=constr_SEQUENCE_OF.c
libasn1_include_HEADERS+=constr_SET_OF.h
libasn1_la_SOURCES+=constr_SET_OF.c
libasn1_include_HEADERS+=asn_application.h
libasn1_include_HEADERS+=asn_system.h
libasn1_include_HEADERS+=asn_codecs.h
libasn1_include_HEADERS+=asn_internal.h
libasn1_include_HEADERS+=OCTET_STRING.h
libasn1_la_SOURCES+=OCTET_STRING.c
libasn1_include_HEADERS+=BIT_STRING.h
libasn1_la_SOURCES+=BIT_STRING.c
libasn1_la_SOURCES+=asn_codecs_prim.c
libasn1_include_HEADERS+=asn_codecs_prim.h
libasn1_include_HEADERS+=ber_tlv_length.h
libasn1_la_SOURCES+=ber_tlv_length.c
libasn1_include_HEADERS+=ber_tlv_tag.h
libasn1_la_SOURCES+=ber_tlv_tag.c
libasn1_include_HEADERS+=ber_decoder.h
libasn1_la_SOURCES+=ber_decoder.c
libasn1_include_HEADERS+=der_encoder.h
libasn1_la_SOURCES+=der_encoder.c
libasn1_include_HEADERS+=constr_TYPE.h
libasn1_la_SOURCES+=constr_TYPE.c
libasn1_include_HEADERS+=constraints.h
libasn1_la_SOURCES+=constraints.c
libasn1_include_HEADERS+=xer_support.h
libasn1_la_SOURCES+=xer_support.c
libasn1_include_HEADERS+=xer_decoder.h
libasn1_la_SOURCES+=xer_decoder.c
libasn1_include_HEADERS+=xer_encoder.h
libasn1_la_SOURCES+=xer_encoder.c
libasn1_include_HEADERS+=per_support.h
libasn1_la_SOURCES+=per_support.c
libasn1_include_HEADERS+=per_decoder.h
libasn1_la_SOURCES+=per_decoder.c
libasn1_include_HEADERS+=per_encoder.h
libasn1_la_SOURCES+=per_encoder.c
libasn1_include_HEADERS+=per_opentype.h
libasn1_la_SOURCES+=per_opentype.c


#ASN_CONVERTER_SOURCES+=converter-sample.c
